--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,10 @@
 <!-- Create your form here -->
+<h3>Student Form</h3>
+
+<%= form_tag students_path do %>
+  <textarea>First Name: </textarea>
+  <%= text_field_tag :'first_name' %>
+  <textarea>Last Name: </textarea>
+  <%= text_field_tag :'last_name' %>
+  <%= submit_tag 'Submit Student' %>
+<% end %>
