--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,7 +2,7 @@
 <h3>Student Form</h3>
 
 <%=form_tag students_path do %>
-  <%= text_field_tag "first_name" %>
-  <%= text_field_tag "last_name" %>
+  <h3>First Name:</h3><%= text_field_tag "first_name" %>
+  <h3>Last Name:<%= text_field_tag "last_name" %>
   <%=submit_tag "Submit Student"%>
 <% end %>
