--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -3,6 +3,6 @@
 
 <%=form_tag students_path do %>
   <h3>First Name:</h3><%= text_field_tag "first_name" %>
-  <h3>Last Name:<%= text_field_tag "last_name" %>
+  <h3>Last Name:</h3><%= text_field_tag "last_name" %>
   <%=submit_tag "Submit Student"%>
 <% end %>
